Added contact/prev project web pages and css files. Made changes to layout of Main.

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,10 @@ h3{
     font-family: Sawasdee;
 }
 
-.page-background {
+body {
     background-color: black;
     background-image: url("../Images/BG(Dark-50).jpg");
 }
+
 
 
