finished officer page. Added Functionlity to differnet dropdown options for Officers. Added Link to ACM Calendar as a demo.

--- a/css/calendarStyles.css
+++ b/css/calendarStyles.css
@@ -2,3 +2,6 @@ body {
     background-color: black;
     background-image: url("../Images/BG(Dark-50).jpg");
 }
+.calendar {
+    filter: invert(100%);
+}
