--- a/css/officers-styles.css
+++ b/css/officers-styles.css
@@ -7,7 +7,10 @@ body {
     background-color: black;
     background-image: url("../Images/BG(Dark-50).jpg");
 }
-.disabled {
+.disabled * {
     pointer-events: none;
     opacity: 0;
+    height:0;
+    width:0;
+    font-size: 0;
 }
