--- a/css/prev-proj-styles.css
+++ b/css/prev-proj-styles.css
@@ -19,4 +19,12 @@ body {
     background-color: black;
     background-image: url("../Images/BG(Dark-50).jpg");
 }
+.fame{
+    margin-left: 25%;
+    margin-top: 15%;
+    
+}
+.description{
+    margin-left: 37%;
+}
 
