--- a/css/prev-proj-styles.css
+++ b/css/prev-proj-styles.css
@@ -19,10 +19,10 @@ body {
     background-color: black;
     background-image: url("../Images/BG(Dark-50).jpg");
 }
-.fame{
-    margin-left: 25%;
-    margin-top: 15%;
-    
+.video-frame {
+    border: dotted;
+    border-radius: 10px;
+    border-color: #FFD100;
 }
 .description{
     margin-left: 37%;
