--- a/css/prev-proj-styles.css
+++ b/css/prev-proj-styles.css
@@ -1,30 +1,29 @@
 .video-boxes{
     opacity: 0.6;
     filter: alpha(opacity=60); /* For IE8 and earlier */
-    padding: 5%;
-    margin-right: 5%;
-    margin-left : 5%;
+    padding: 1%;
+    margin-right: 1%;
+    margin-left : 1%;
     background-color: #ffffff;
     border: 2px solid black;
+    height:80%;
+    width: 80%;
 }
 .video-boxes:hover{
     opacity: 1;
     filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
-.video-row {
-    margin : 5%;
-}
 body {
     background-color: black;
     background-image: url("../Images/BG(Dark-50).jpg");
 }
-.video-frame {
-    border: dotted;
-    border-radius: 10px;
-    border-color: #FFD100;
-}
+
 .description{
-    margin-left: 37%;
+    text-align: center;
 }
 
+.player{
+    width:560px;
+    height:315px;
+}
