--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -56,7 +56,7 @@ body {
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 250px;
+    width: 100%;
     margin: 0;
     padding: 0;
     list-style: none;
