--- a/css/global-styles.css
+++ b/css/global-styles.css
@@ -1,3 +1,15 @@
+a {
+    color: #ffce00;
+}
+.csula-icon {
+    margin-top: -15px;
+    margin-left: -15px;
+    height: 50px;
+    width: 40px;
+    position: fixed;
+}
+
+
 .fpc-icon {
     margin-top: -15px;
     margin-left: -15px;
@@ -5,6 +17,7 @@
     height: 50px;
     width: 50px;
 }
+
 /* navbar */
 .navbar-custom {
     background-color: black;
