--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -6,10 +6,12 @@ div.transbox {
     filter: alpha(opacity=60); /* For IE8 and earlier */
 
 }
+
 h1 {
     font-family: Sawasdee;
 }
-h3{
+
+h3 {
     font-family: Sawasdee;
 }
 
@@ -17,11 +19,12 @@ body {
     background-color: black;
     background-image: url("../Images/BG(Dark-50).jpg");
 }
-.gif{
+
+.gif {
     position: fixed;
     left: 67px;
     border-radius: 15px;
-    height:50%;
+    height: 50%;
     width: 30%;
 }
 
@@ -33,3 +36,46 @@ body {
     width: 30%;
 }
 
+.btn-gold {
+    color: #454545;
+    background-color: #ffce00;
+    border-color: #ffce00;
+}
+
+.btn-gold:focus, btn-gold.focus{
+    color: #454545;
+    background-color: #ffce00;
+    border-color: #454545;
+}
+
+.btn-gold:hover{
+    color: #454545;
+    background-color: #d8a500;
+    border-color: #d8a500;
+}
+/*.btn-gold:active, .btn-gold.active, open > .dropdown-toggle.btn-gold {*/
+    /*color: #454545;*/
+    /*background-color: #d8a500;*/
+    /*border-color: #d8a500;*/
+/*}*/
+
+
+/*.btn-gold:active:hover, .btn-gold.active:hover, .open > .dropdown-toggle.btn-gold:hover, .btn-gold:active:focus, .btn-gold.active:focus, .open > .dropdown-toggle.btn-gold:focus, .btn-gold:active.focus, .btn-gold.active.focus, .open > .dropdown-toggle.btn-gold.focus {*/
+    /*color: #454545;*/
+    /*background-color: #d8a500;*/
+    /*border-color: #d8a500;*/
+/*}*/
+
+/*.btn-gold:active, .btn-gold.active, .open > .dropdown-toggle.btn-gold {*/
+    /*background-image: none*/
+/*}*/
+
+/*.btn-gold.disabled:hover, .btn-gold[disabled]:hover, fieldset[disabled] .btn-gold:hover, .btn-gold.disabled:focus, .btn-gold[disabled]:focus, fieldset[disabled] .btn-gold:focus, .btn-gold.disabled.focus, .btn-gold[disabled].focus, fieldset[disabled] .btn-gold.focus {*/
+    /*background-color: #d8a500;*/
+    /*border-color: #d8a500;*/
+/*}*/
+
+/*.btn-gold .badge {*/
+    /*color: #375a7f;*/
+    /*background-color: #000*/
+/*}*/
