--- a/css/global-styles.css
+++ b/css/global-styles.css
@@ -1,6 +1,16 @@
 a {
     color: #ffce00;
 }
+
+h1, h2, h3, h4, h5, h6, body {
+    font-family: 'Sofia';
+}
+
+body {
+    background-color: black;
+    background-image: url("../Images/BG(Dark-50).jpg");
+}
+
 .csula-icon {
     margin-top: -15px;
     margin-left: -15px;
