--- a/css/projects-styles.css
+++ b/css/projects-styles.css
@@ -1,29 +1,156 @@
-.video-boxes{
-    opacity: 0.6;
-    filter: alpha(opacity=60); /* For IE8 and earlier */
-    padding: 1%;
-    margin-right: 1%;
-    margin-left : 1%;
-    background-color: #ffffff;
-    border: 2px solid black;
-    height:80%;
-    width: 80%;
-}
-.video-boxes:hover{
-    opacity: 1;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
-}
 
-body {
-    background-color: black;
-    background-image: url("../Images/BG(Dark-50).jpg");
-}
 
-.description{
+.title {
+    margin-top: 7%;
+    width: 100%;
     text-align: center;
 }
 
-.player{
-    width:784px;
-    height:441px;
+.caption {
+    width: 100%;
+    max-width: 854px;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+
+.container {
+    width: 100%;
+    max-width: 854px;
+    min-width: 440px;
+    margin: 0 auto;
+}
+
+
+/*  VIDEO PLAYER CONTAINER
+############################### */
+.vid-container {
+    position: relative;
+    padding-bottom: 52%;
+    padding-top: 30px;
+    height: 0;
+}
+
+.vid-container iframe,
+.vid-container object,
+.vid-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+/*  VIDEOS PLAYLIST
+ ############################### */
+.vid-list-container {
+    width: 100%;
+    overflow: hidden;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.vid-list {
+    width: 1344px;
+    position: relative;
+    top:0;
+    left: 0;
+}
+
+.vid-item {
+    display: block;
+    width: 148px;
+    height: 148px;
+    float: left;
+    margin: 0;
+    padding: 10px;
+    opacity: 1;
+}
+
+.thumb {
+    /*position: relative;*/
+    overflow:hidden;
+    height: 84px;
+}
+
+.thumb img {
+    width: 100%;
+    position: relative;
+    top: -13px;
+}
+
+.vid-item .desc {
+    color: #ffce00;
+    font-size: 15px;
+    margin-top:5px;
+}
+
+.vid-item:hover {
+    background: #eee;
+    cursor: pointer;
+}
+
+.arrows {
+    position:relative;
+    width: 100%;
+}
+
+.arrow-left {
+    color: #fff;
+    position: absolute;
+    background: #777;
+    padding: 15px;
+    left: -25px;
+    top: -130px;
+    z-index: 99;
+    cursor: pointer;
+}
+
+.arrow-right {
+    color: #fff;
+    position: absolute;
+    background: #777;
+    padding: 15px;
+    right: -25px;
+    top: -130px;
+    z-index:100;
+    cursor: pointer;
+}
+
+.arrow-left:hover {
+    background: #CC181E;
+}
+
+.arrow-right:hover {
+    background: #CC181E;
+}
+
+
+@media (max-width: 624px) {
+    body {
+        margin: 15px;
+    }
+    .caption {
+        margin-top: 40px;
+    }
+    .vid-list-container {
+        padding-bottom: 20px;
+    }
+
+    /* reposition left/right arrows */
+    .arrows {
+        position:relative;
+        margin: 0 auto;
+        width:96px;
+    }
+    .arrow-left {
+        left: 0;
+        top: -17px;
+    }
+
+    .arrow-right {
+        right: 0;
+        top: -17px;
+    }
 }
