--- a/css/projects-styles.css
+++ b/css/projects-styles.css
@@ -13,7 +13,7 @@
     padding: 20px 0;
 }
 
-.container {
+.player-container {
     width: 100%;
     max-width: 854px;
     min-width: 440px;
@@ -46,8 +46,7 @@
 .vid-list-container {
     width: 100%;
     overflow: hidden;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
     background-color: rgba(0, 0, 0, 0.7);
 }
 
@@ -64,8 +63,7 @@
     height: 148px;
     float: left;
     margin: 0;
-    padding: 10px;
-    opacity: 1;
+    padding: 0px 10px;
 }
 
 .thumb {
@@ -77,7 +75,7 @@
 .thumb img {
     width: 100%;
     position: relative;
-    top: -13px;
+    padding-top: 10px;
 }
 
 .vid-item .desc {
@@ -85,10 +83,11 @@
     font-size: 15px;
     margin-top:5px;
     text-align: center;
+
 }
 
 .vid-item:hover {
-    background: #eee;
+    background: #000;
     cursor: pointer;
 }
 
@@ -98,27 +97,22 @@
 }
 .arrow-left, .arrow-right {
     opacity: .5;
-}
-.arrow-left {
     color: #000;
     position: absolute;
     background: #BBB;
     padding: 10px;
-    left: -25px;
     top: -125px;
     z-index: 99;
     cursor: pointer;
+    border-radius: 10px;
+}
+.arrow-left {
+    left: -20px;
 }
 
+
 .arrow-right {
-    color: #000;
-    position: absolute;
-    background: #BBB;
-    padding: 10px;
-    right: -25px;
-    top: -125px;
-    z-index:100;
-    cursor: pointer;
+    right: -20px;
 }
 
 .arrow-left:hover, .arrow-right:hover {
