--- a/css/projects-styles.css
+++ b/css/projects-styles.css
@@ -51,10 +51,11 @@
 }
 
 .vid-list {
-    width: 1344px;
+    width: 10000%;
     position: relative;
     top:0;
     left: 0;
+    white-space:nowrap;
 }
 
 .vid-item {
